force-app/main/default/objects/PA_Log__c/PA_Log__c.object-meta.xml
<CustomObject>
    <label>PA Log</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>PA Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PA Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>