force-app/main/default/objects/PA_Log__c/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club Activity</fullName>
            </value>
            <value>
                <fullName>Club Closed</fullName>
            </value>
            <value>
                <fullName>No Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>