force-app/main/default/objects/PA_Log__c/fields/Days_Reported__c.field-meta.xml
<CustomField>
    <fullName>Days_Reported__c</fullName>
    <label>Days Reported</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>