force-app/main/default/objects/PA_Log__c/fields/Minutes_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Activity__c</fullName>
    <label>Minutes of Activity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>