force-app/main/default/objects/PA_Log__c/fields/Monthly_PA_Report__c.field-meta.xml
<CustomField>
    <fullName>Monthly_PA_Report__c</fullName>
    <label>Monthly PA Report</label>
    <referenceTo>Program_Report__c</referenceTo>
    <relationshipLabel>PA Logs</relationshipLabel>
    <relationshipName>Daily_PA_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>