force-app/main/default/objects/PA_Log__c/fields/Number_of_Girls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Girls__c</fullName>
    <label>Number of Girls</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>