force-app/main/default/objects/PA_Log__c/fields/Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Notes__c</fullName>
    <label>Reviewer Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>