force-app/main/default/objects/PA_Log__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PA Logs</relationshipLabel>
    <relationshipName>PA_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>